# proof-protocol-decoder

./: Cargo.toml
plonky_block_proof_gen/: Cargo.toml
protocol_decoder/: Cargo.toml
protocol_decoder/src/: decoding.rs  lib.rs  processed_block_trace.rs  trace_protocol.rs  types.rs  utils.rs
protocol_decoder/src/compact/: compact_prestate_processing.rs  compact_to_partial_trie.rs  complex_test_payloads.rs  mod.rs
protocol_decoder/src/trace_debug_tooling/: mod.rs  rpc_utils.rs  verification.rs
src/: decoding.rs  lib.rs  processed_block_trace.rs  types.rs
src/compact/: compact_prestate_processing.rs  complex_test_payloads.rs  mod.rs
src/tests/: mod.rs  proof_tests.rs
